# Magnetic_Pendulum

./: 0.pgm  CMakeLists.txt  FinalTest.sln  README.md  id.pgm  main.c  test.pgm  vector.c
ConsoleApplication1/: ConsoleApplication1.sln
ConsoleApplication1/ConsoleApplication1/: ConsoleApplication1.cpp  ConsoleApplication1.vcxproj
ConsoleApplication1/Pendulum_CUDA/: Pendulum_CUDA.sln
ConsoleApplication1/Pendulum_CUDA/Pendulum_CUDA/: kernel.cu
ConsoleApplication1/Pendulum_CUDA/Pendulum_CUDA/gif/: testbash
FinalTest/: FinalTest.vcxproj  main.cpp
Pendulum_CUDA/Pendulum_CUDA/: Pendulum_CUDA.vcxproj  kernel.cu
Pendulum_CUDA/Pendulum_CUDA/gif/: patrol_cycle.textClipping
enc_temp_folder/ea5580c5b93ba62469c73936dd1977c4/: main.cpp
